crates/agent-compose/tests/snapshots/trace_format_stability__a_refused_tool_calls_trace_document_keeps_its_shape.snap
---
source: crates/agent-compose/tests/trace_format_stability.rs
expression: document(&run)
---
{
  "entries": [
    {
      "attempts": 1,
      "flow": "flow.ask",
      "models": [
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.smart",
          "servedBy": "model.smart",
          "toolCalls": [
            {
              "error": "ToolCallRefused: the arguments `condense` was called with: passage: expected at least 1 character (found \"\")",
              "name": "condense",
              "outcome": "refused",
              "target": "flow.condense"
            }
          ]
        },
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.smart",
          "servedBy": "model.smart",
          "toolCalls": [
            {
              "instance": "<execution-id>/ask/0/condense/0",
              "name": "condense",
              "outcome": "completed",
              "result": {
                "line": "the first line"
              },
              "target": "flow.condense"
            }
          ]
        },
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.smart",
          "servedBy": "model.smart"
        },
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.smart",
          "outputMechanism": "native",
          "servedBy": "model.smart"
        }
      ],
      "node": "ask",
      "outcome": "completed",
      "routing": {
        "counters": {},
        "edges": [
          {
            "reason": "unconditional",
            "taken": true,
            "to": "__end__"
          }
        ],
        "targets": [
          "__end__"
        ]
      },
      "step": 1,
      "toolDispatches": [
        {
          "attempts": 1,
          "idempotencyKey": "<execution-id>/ask/0/condense/0",
          "index": 0,
          "inner": [
            {
              "attempts": 1,
              "flow": "flow.condense",
              "node": "note",
              "outcome": "completed",
              "routing": {
                "counters": {},
                "edges": [
                  {
                    "reason": "unconditional",
                    "taken": true,
                    "to": "reduce"
                  }
                ],
                "targets": [
                  "reduce"
                ]
              },
              "step": 1,
              "stores": [
                {
                  "deduped": false,
                  "effect": "write",
                  "idempotencyKey": "<execution-id>/ask/0/condense/0/note/0",
                  "key": "last",
                  "op": "set",
                  "scope": "execution",
                  "store": "store.seen",
                  "via": "node"
                }
              ],
              "traversal": 0,
              "writes": []
            },
            {
              "attempts": 1,
              "flow": "flow.condense",
              "models": [
                {
                  "failovers": [],
                  "fallback": 0,
                  "model": "model.smart",
                  "outputMechanism": "native",
                  "servedBy": "model.smart"
                }
              ],
              "node": "reduce",
              "outcome": "completed",
              "routing": {
                "counters": {},
                "edges": [
                  {
                    "reason": "unconditional",
                    "taken": true,
                    "to": "__end__"
                  }
                ],
                "targets": [
                  "__end__"
                ]
              },
              "step": 2,
              "traversal": 0,
              "writes": [
                "line"
              ]
            }
          ],
          "outcome": "completed",
          "target": "flow.condense"
        }
      ],
      "traversal": 0,
      "writes": [
        "answer"
      ]
    }
  ],
  "execution_id": "<execution-id>",
  "flow": "flow.ask",
  "status": "completed",
  "trace_version": 6
}
