crates/agent-compose/tests/snapshots/trace_format_stability__a_routed_fan_outs_trace_document_keeps_its_shape.snap
---
source: crates/agent-compose/tests/trace_format_stability.rs
expression: document(&run)
---
{
  "entries": [
    {
      "attempts": 1,
      "flow": "flow.triage",
      "inner": [
        {
          "attempts": 1,
          "flow": "flow.normalize",
          "models": [
            {
              "failovers": [],
              "fallback": 0,
              "model": "model.fast",
              "outputMechanism": "native",
              "servedBy": "model.fast"
            }
          ],
          "node": "clean",
          "outcome": "completed",
          "routing": {
            "counters": {},
            "edges": [
              {
                "reason": "unconditional",
                "taken": true,
                "to": "__end__"
              }
            ],
            "targets": [
              "__end__"
            ]
          },
          "step": 1,
          "traversal": 0,
          "writes": [
            "normalized"
          ]
        }
      ],
      "node": "prepare",
      "outcome": "completed",
      "routing": {
        "counters": {},
        "edges": [
          {
            "reason": "unconditional",
            "taken": true,
            "to": "classify"
          }
        ],
        "targets": [
          "classify"
        ]
      },
      "step": 1,
      "traversal": 0,
      "writes": [
        "normalized"
      ]
    },
    {
      "attempts": 1,
      "flow": "flow.triage",
      "models": [
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.smart",
          "outputMechanism": "native",
          "servedBy": "model.smart"
        }
      ],
      "node": "classify",
      "outcome": "completed",
      "routing": {
        "counters": {},
        "edges": [
          {
            "reason": "unconditional",
            "taken": true,
            "to": "dispatch"
          }
        ],
        "targets": [
          "dispatch"
        ]
      },
      "step": 2,
      "traversal": 0,
      "writes": []
    },
    {
      "attempts": 1,
      "dispatches": [
        {
          "attempts": 1,
          "idempotencyKey": "<execution-id>/dispatch/0/0",
          "index": 0,
          "outcome": "completed",
          "route": "auto_fixable",
          "target": "agent.fixer",
          "variant": "auto_fixable"
        },
        {
          "attempts": 1,
          "idempotencyKey": "<execution-id>/dispatch/0/1",
          "index": 1,
          "outcome": "completed",
          "route": "needs_human",
          "target": "agent.escalator",
          "variant": "needs_human"
        }
      ],
      "flow": "flow.triage",
      "models": [
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.fast",
          "outputMechanism": "native",
          "servedBy": "model.fast"
        },
        {
          "failovers": [],
          "fallback": 0,
          "model": "model.fast",
          "outputMechanism": "native",
          "servedBy": "model.fast"
        }
      ],
      "node": "dispatch",
      "outcome": "completed",
      "routing": {
        "counters": {},
        "edges": [
          {
            "reason": "unconditional",
            "taken": true,
            "to": "__end__"
          }
        ],
        "targets": [
          "__end__"
        ]
      },
      "step": 3,
      "traversal": 0,
      "writes": [
        "drafts",
        "tickets"
      ]
    }
  ],
  "execution_id": "<execution-id>",
  "flow": "flow.triage",
  "status": "completed",
  "trace_version": 6
}
